--- a/config/database.yml
+++ b/config/database.yml
@@ -7,11 +7,11 @@ default: &default
   host: 34.245.203.249
   port: 5432
   username: postgres
-  password: Project@2019
+  password: Project2019
 
 development:
   <<: *default
-  database: project
+  database: pricecomparison_prod
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -45,7 +45,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: project_test
+  database: pricecomparison_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -68,4 +68,4 @@ test:
 #
 production:
   <<: *default
-  database: project_prod
+  database: pricecomparison_prod
